# xletters2-ja

./: .gitignore  Changelog  CompJapanEngDict.java  Imakefile  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  dictionary.html  inputconv.txt  jp-en.txt  utf8.h  xletters-duel  xletters.6  xletters.c  xletters.h  xletters.spec.in
fonts/: fonts.dir  ipagothic-copyright.txt
input/: inputconv-jiskana.txt
words/: hiragana-basic.utf8
